--- a/UnlockVip/UnlockVip.conf
+++ b/UnlockVip/UnlockVip.conf
@@ -1,5 +1,5 @@
 # 微信小程序-车机互联
 //[rewrite_local]
-^https:\/\/tsp\.txzing\.com\/api(\/p/operation/common/allowFreeVip|\/p/operation/vipCoupon/popUpCouponInfo|\/p/operation/activity/situation|\/w/wx/module/findCar/findCarVipInfo/isVip|\/w/wx/module/trace/userVip) url script-response-body Cheji.js
+^https:\/\/tsp\.txzing\.com\/api(\/p/operation/common/allowFreeVip|\/p/operation/vipCoupon/popUpCouponInfo|\/p/operation/activity/situation|\/w/wx/module/findCar/findCarVipInfo/isVip|\/w/wx/module/trace/userVip) url script-response-body https://raw.githubusercontent.com/General74110/QuantumultX/master/UnlockVip/Cheji.js
 //MITM
 hostname = tsp.txzing.com
